--- a/css/basic.css
+++ b/css/basic.css
@@ -2,14 +2,23 @@ html {
   font-size: 18px;
 }
 
+body, div {
+  border-radius: 20px;
+  border: 3px solid red;
+  -webkit-box-shadow: 0 3px 11px 0px rgba(0, 0, 0, 0.75);
+          box-shadow: 0 3px 11px 0px rgba(0, 0, 0, 0.75);
+}
+
 body {
+  padding: 30px;
   margin: 20px;
-  background-color: blanchedalmond;
+  background-color: green;
 }
 
 div {
-  color: #534e4e;
   padding: 20px;
+  margin: 10px;
+  color: green;
 }
 
 a {
@@ -24,6 +33,23 @@ a {
           box-shadow: 0 3px 11px 0px rgba(0, 0, 0, 0.75);
 }
 
+@media screen and (max-width: 500px) {
+  #box1 {
+    font-size: 80px;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 900px) {
+  #box1 {
+    font-size: 10px;
+  }
+}
+
+#box1-title {
+  font-style: italic;
+  text-decoration: underline;
+}
+
 #box1 > a {
   color: #670e0e;
   text-decoration: none;
@@ -36,11 +62,6 @@ a {
 
 #box1:hover {
   background-color: blanchedalmond;
-}
-
-#box1-title {
-  font-style: italic;
-  text-decoration: underline;
 }
 
 #box1, #box1-title {
