--- a/sass/basic.scss
+++ b/sass/basic.scss
@@ -1,15 +1,27 @@
 html {
   font-size: 18px;
 }
+$basic-color: green;
 
+@mixin space($padding, $margin) {
+  padding: $padding;
+  margin: $margin;
+}
+%outline {
+  border-radius: 20px;
+  border: 3px solid red;
+  box-shadow: 0 3px 11px 0px rgba(0, 0, 0, 0.75);
+}
 body {
-  margin: 20px;
-  background-color: blanchedalmond;
+  @include space(30px, 20px);
+  background-color: $basic-color;
+  @extend %outline;
 }
 
 div {
-  color: rgb(83, 78, 78);
-  padding: 20px;
+  @include space(20px, 10px);
+  color: $basic-color;
+  @extend %outline;
 }
 
 a {
@@ -22,6 +34,18 @@ a {
   background-color: pink;
 
   box-shadow: 0 3px 11px 0px rgba(0, 0, 0, 0.75);
+
+  @media screen and (max-width: 500px) {
+    font-size: 80px;
+  }
+  @media screen and (min-width: 501px) and(max-width:900px) {
+    font-size: 10px;
+  }
+
+  &-title {
+    font-style: italic;
+    text-decoration: underline;
+  }
 
   & > a {
     color: rgb(103, 14, 14);
@@ -36,10 +60,7 @@ a {
     background-color: blanchedalmond;
   }
   //box1-title
-  &-title {
-    font-style: italic;
-    text-decoration: underline;
-  }
+
   &,
   &-title {
     border-radius: 20px;
