--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,26 +1,24 @@
-body {
-  background-color: orange;
+@mixin textAndBgColor($T, $B) {
+  color: $T;
+  background-color: $B;
 }
 
-$bg-color: green;
+@mixin theme($mood) {
+  @if $mood == "light" {
+    @include textAndBgColor(white, black);
+  } @else if $mood == "night" {
+    @include textAndBgColor(black, white);
+  } @else {
+    @include textAndBgColor(red, blue);
+  }
+}
+
 #box1 {
-  background-color: $bg-color;
-  width: 100px;
+  @include theme("light");
 }
 #box2 {
-  background-color: $bg-color;
-  width: 200px;
+  @include theme("night");
 }
-
 #box3 {
-  background-color: $bg-color;
-  width: 300px;
-}
-#box4 {
-  background-color: $bg-color;
-  width: 400px;
-}
-#box5 {
-  background-color: $bg-color;
-  width: 500px;
+  @include theme("what");
 }
